// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PieChart ACT theme matches the snapshot 1`] = `
<div>
  <div
    class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-column MuiGrid2-grid-xs-12 MuiGrid2-spacing-xs-2 css-127wxc0-MuiGrid2-root"
  >
    <div
      class="MuiGrid2-root MuiGrid2-direction-xs-row css-1gx6ceo-MuiGrid2-root"
    >
      <div
        class="recharts-responsive-container"
        style="width: 100%; height: 350px; min-width: 0;"
      />
    </div>
  </div>
</div>
`;

exports[`PieChart ACT_ET theme matches the snapshot 1`] = `
<div>
  <div
    class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-column MuiGrid2-grid-xs-12 MuiGrid2-spacing-xs-2 css-127wxc0-MuiGrid2-root"
  >
    <div
      class="MuiGrid2-root MuiGrid2-direction-xs-row css-1gx6ceo-MuiGrid2-root"
    >
      <div
        class="recharts-responsive-container"
        style="width: 100%; height: 350px; min-width: 0;"
      />
    </div>
  </div>
</div>
`;

exports[`PieChart ENCOURA theme matches the snapshot 1`] = `
<div>
  <div
    class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-column MuiGrid2-grid-xs-12 MuiGrid2-spacing-xs-2 css-127wxc0-MuiGrid2-root"
  >
    <div
      class="MuiGrid2-root MuiGrid2-direction-xs-row css-1gx6ceo-MuiGrid2-root"
    >
      <div
        class="recharts-responsive-container"
        style="width: 100%; height: 350px; min-width: 0;"
      />
    </div>
  </div>
</div>
`;

exports[`PieChart ENCOURA_CLASSIC theme matches the snapshot 1`] = `
<div>
  <div
    class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-column MuiGrid2-grid-xs-12 MuiGrid2-spacing-xs-2 css-127wxc0-MuiGrid2-root"
  >
    <div
      class="MuiGrid2-root MuiGrid2-direction-xs-row css-1gx6ceo-MuiGrid2-root"
    >
      <div
        class="recharts-responsive-container"
        style="width: 100%; height: 350px; min-width: 0;"
      />
    </div>
  </div>
</div>
`;

exports[`PieChart ENCOURAGE theme matches the snapshot 1`] = `
<div>
  <div
    class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-column MuiGrid2-grid-xs-12 MuiGrid2-spacing-xs-2 css-127wxc0-MuiGrid2-root"
  >
    <div
      class="MuiGrid2-root MuiGrid2-direction-xs-row css-1gx6ceo-MuiGrid2-root"
    >
      <div
        class="recharts-responsive-container"
        style="width: 100%; height: 350px; min-width: 0;"
      />
    </div>
  </div>
</div>
`;

exports[`PieChart ENCOURAGE_E4E theme matches the snapshot 1`] = `
<div>
  <div
    class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-column MuiGrid2-grid-xs-12 MuiGrid2-spacing-xs-2 css-127wxc0-MuiGrid2-root"
  >
    <div
      class="MuiGrid2-root MuiGrid2-direction-xs-row css-1gx6ceo-MuiGrid2-root"
    >
      <div
        class="recharts-responsive-container"
        style="width: 100%; height: 350px; min-width: 0;"
      />
    </div>
  </div>
</div>
`;

exports[`PieChart with title ACT theme matches the snapshot 1`] = `
<div>
  <div
    class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-column MuiGrid2-grid-xs-12 MuiGrid2-spacing-xs-2 css-127wxc0-MuiGrid2-root"
  >
    <div
      class="MuiGrid2-root MuiGrid2-direction-xs-row css-amvy17-MuiGrid2-root"
    >
      <p
        class="MuiTypography-root MuiTypography-body1 MuiTypography-alignCenter css-1hzqid-MuiTypography-root-DlsPieChart-titleText"
        style="--Typography-textAlign: center;"
        title="Test Title"
      >
        Test Title
      </p>
    </div>
    <div
      class="MuiGrid2-root MuiGrid2-direction-xs-row css-1gx6ceo-MuiGrid2-root"
    >
      <div
        class="recharts-responsive-container"
        style="width: 100%; height: 350px; min-width: 0;"
      />
    </div>
  </div>
</div>
`;

exports[`PieChart with title ACT_ET theme matches the snapshot 1`] = `
<div>
  <div
    class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-column MuiGrid2-grid-xs-12 MuiGrid2-spacing-xs-2 css-127wxc0-MuiGrid2-root"
  >
    <div
      class="MuiGrid2-root MuiGrid2-direction-xs-row css-amvy17-MuiGrid2-root"
    >
      <p
        class="MuiTypography-root MuiTypography-body1 MuiTypography-alignCenter css-10e2x1-MuiTypography-root-DlsPieChart-titleText"
        style="--Typography-textAlign: center;"
        title="Test Title"
      >
        Test Title
      </p>
    </div>
    <div
      class="MuiGrid2-root MuiGrid2-direction-xs-row css-1gx6ceo-MuiGrid2-root"
    >
      <div
        class="recharts-responsive-container"
        style="width: 100%; height: 350px; min-width: 0;"
      />
    </div>
  </div>
</div>
`;

exports[`PieChart with title ENCOURA theme matches the snapshot 1`] = `
<div>
  <div
    class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-column MuiGrid2-grid-xs-12 MuiGrid2-spacing-xs-2 css-127wxc0-MuiGrid2-root"
  >
    <div
      class="MuiGrid2-root MuiGrid2-direction-xs-row css-amvy17-MuiGrid2-root"
    >
      <p
        class="MuiTypography-root MuiTypography-body1 MuiTypography-alignCenter css-1nszx3p-MuiTypography-root-DlsPieChart-titleText"
        style="--Typography-textAlign: center;"
        title="Test Title"
      >
        Test Title
      </p>
    </div>
    <div
      class="MuiGrid2-root MuiGrid2-direction-xs-row css-1gx6ceo-MuiGrid2-root"
    >
      <div
        class="recharts-responsive-container"
        style="width: 100%; height: 350px; min-width: 0;"
      />
    </div>
  </div>
</div>
`;

exports[`PieChart with title ENCOURA_CLASSIC theme matches the snapshot 1`] = `
<div>
  <div
    class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-column MuiGrid2-grid-xs-12 MuiGrid2-spacing-xs-2 css-127wxc0-MuiGrid2-root"
  >
    <div
      class="MuiGrid2-root MuiGrid2-direction-xs-row css-amvy17-MuiGrid2-root"
    >
      <p
        class="MuiTypography-root MuiTypography-body1 MuiTypography-alignCenter css-1nszx3p-MuiTypography-root-DlsPieChart-titleText"
        style="--Typography-textAlign: center;"
        title="Test Title"
      >
        Test Title
      </p>
    </div>
    <div
      class="MuiGrid2-root MuiGrid2-direction-xs-row css-1gx6ceo-MuiGrid2-root"
    >
      <div
        class="recharts-responsive-container"
        style="width: 100%; height: 350px; min-width: 0;"
      />
    </div>
  </div>
</div>
`;

exports[`PieChart with title ENCOURAGE theme matches the snapshot 1`] = `
<div>
  <div
    class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-column MuiGrid2-grid-xs-12 MuiGrid2-spacing-xs-2 css-127wxc0-MuiGrid2-root"
  >
    <div
      class="MuiGrid2-root MuiGrid2-direction-xs-row css-amvy17-MuiGrid2-root"
    >
      <p
        class="MuiTypography-root MuiTypography-body1 MuiTypography-alignCenter css-apqn47-MuiTypography-root-DlsPieChart-titleText"
        style="--Typography-textAlign: center;"
        title="Test Title"
      >
        Test Title
      </p>
    </div>
    <div
      class="MuiGrid2-root MuiGrid2-direction-xs-row css-1gx6ceo-MuiGrid2-root"
    >
      <div
        class="recharts-responsive-container"
        style="width: 100%; height: 350px; min-width: 0;"
      />
    </div>
  </div>
</div>
`;

exports[`PieChart with title ENCOURAGE_E4E theme matches the snapshot 1`] = `
<div>
  <div
    class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-column MuiGrid2-grid-xs-12 MuiGrid2-spacing-xs-2 css-127wxc0-MuiGrid2-root"
  >
    <div
      class="MuiGrid2-root MuiGrid2-direction-xs-row css-amvy17-MuiGrid2-root"
    >
      <p
        class="MuiTypography-root MuiTypography-body1 MuiTypography-alignCenter css-xuterm-MuiTypography-root-DlsPieChart-titleText"
        style="--Typography-textAlign: center;"
        title="Test Title"
      >
        Test Title
      </p>
    </div>
    <div
      class="MuiGrid2-root MuiGrid2-direction-xs-row css-1gx6ceo-MuiGrid2-root"
    >
      <div
        class="recharts-responsive-container"
        style="width: 100%; height: 350px; min-width: 0;"
      />
    </div>
  </div>
</div>
`;
